# qig-coordizer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/qig_coordizer/: __init__.py  cache.py  constants.py  coordizer.py  normalizer.py  special_tokens.py  trainer.py  types.py
tests/: test_incremental_cache.py  test_incremental_equivalence.py  test_no_collision.py  test_normalizer.py  test_trainer_heap_equivalence.py
